fix(rate-limit): стабилизация Redis rate limiter и тестовой инфраструктуры
- добавлена нормализация TTL в Lua-скриптах, когда Redis возвращает PTTL = -2 для отсутствующего ключа
- гарантированы положительные значения TTL во всех результатах DualRateLimitResult
- исключено увеличение счётчика нового пользователя при исчерпанном лимите организации
- сохранена атомарная обработка пользовательского и организационного лимитов
- удалены неиспользуемые перегрузки и методы сброса из RedisFixedWindowRateLimiter
- сохранена атомарная очистка лимита после успешной авторизации
- сохранены предыдущие неуспешные попытки по IP после успешного входа
- добавлено удаление notification marker при ошибке публикации события аудита
- расширены Redis integration-тесты для TTL, конкурентного доступа, marker-ключей и очистки счётчиков
- удалены лишние Mockito stubbing из LoginRateLimitServiceTest
- исправлено управление ресурсами Testcontainers и ExecutorService
- внешние Redis Sentinel и Redis Cluster тесты теперь пропускаются без обязательных переменных окружения
- ожидание восстановления после Sentinel failover переведено на Awaitility
- добавлена проверка совместимости Redis Cluster hash slot и допустимой длины key-version
- синхронизирован срок жизни access-token cookie со сроком жизни JWT
- исправлена структура safeai.security.hsts в application-test.yml
- приведена к единому виду тестовая и основная конфигурация rate limit